<resources>
    <string name="app_name">JaVi Memo</string>
    <string name="quiz_tab_label">QUIZ</string>
    <string name="entryList_tab_label">Từ Vựng</string>
    <string name="kanjiList_tab_label">Chữ Hán</string>
    <string name="setting_tab_label">Cài Đặt</string>
    <string name="toolbar_search_label">Tìm kiếm</string>
    <string name="toolbar_refresh_label">Tải </string>
    <string name="toolbar_sort_label">Sắp xếp</string>
    <string name="quiz_select_vocabulary_button">Quiz Từ Vựng</string>
    <string name="quiz_select_kanji_button">Quiz Chữ Hán</string>
    <string name="entry_label">Từ Vựng</string>
    <string name="kanji_label">Chữ Hán</string>
    <string name="record_label">ĐIỂM</string>
    <string name="new_word_hint">thêm từ </string>
    <string name="back_button">quay lại</string>
    <string name="edit_button">sửa</string>
    <string name="done_button">xong</string>
    <string name="upgrade_setting_button">Nâng cấp</string>
    <string name="logout_button">Đăng xuất</string>
    <string name="user_name_label">Người dùng</string>
    <string name="password_label">Mật khẩu</string>
    <string name="retype_password_label">Gõ lại mật khẩu</string>
    <string name="sign_in_button">Đăng nhập</string>
    <string name="sign_up_button">Đăng kí</string>
    <string name="alphabet_menu_item">Alphabet</string>
    <string name="date_menu_item">Ngày thêm</string>
    <string name="level_menu_item">Level</string>
    <string name="high_score_title">ĐIỂM </string>
    <string name="your_score_title">ĐIỂM CỦA BẠN</string>
    <string name="score_title">ĐIỂM</string>
    <string name="level_title">ĐỘ KHÓ</string>
    <string name="start_button">BẮT ĐẦU</string>
    <string name="time_title">THỜI GIAN</string>
    <string name="furigana">furigana</string>
    <string name="lose_title">THUA</string>
    <string name="complete_title">Bạn đã hoàn thành danh sách từ của bạn</string>
    <string name="request_update_list_title">Hãy cập nhật danh sách</string>
    <string name="continue_message">Chọn OK dể tiếp tục</string>
    <string name="ok_button">OK</string>

    <string name="warning_title">WARNING</string>
    <string name="delete_entry_confirm">Bạn có chắc muốn xoá từ này không?</string>
    <string name="max_value_validate">Hãy nhập từ có dưới 4 chữ</string>
    <string name="existed_warning"> đã có trong danh sách</string>
    <string name="not_null_validate">Hãy nhập gì đó</string>
    <string name="log_out_warning">Bạn có muốn đăng xuất</string>
    <string name="reset_entry_level_confirm">Bạn có muốn reset level của toàn bộ Từ Vựng</string>
    <string name="reset_kanji_level_confirm">Bạn có muốn reset level của toàn bộ Chữ Hán</string>
    <string name="clear_entry_confirm">Bạn có muốn XOÁ toàn bộ Từ Vựng</string>
    <string name="yes_button">CÓ</string>
    <string name="no_button">KHÔNG</string>

    <string name="max_level_title">Max Level</string>
    <string name="reset_level_title">Reset Level</string>
    <string name="clear_data_title">Xoá dữ liệu</string>
    <string name="lock_screen_game_title">Game màn hình khoá</string>
    <string name="max_level_entry_tv">Đổi max level của Từ Vựng thành</string>
    <string name="max_level_kanji_tv">Đổi max level của Chữ Hán thành</string>
    <string name="reset_level_entry_tv">Reset level tất cả Từ Vựng</string>
    <string name="reset_level_kanji_tv">Reset level tất cả Chữ Hán</string>
    <string name="clear_entry_tv">Xoá tất cả Từ Vựng</string>
    <string name="lock_screen_game_active_tv">Active Lock Screen game mode</string>
    <string name="lock_screen_game_catalog_tv">Dữ liệu game</string>
    <string name="reset_button">RESET</string>
    <string name="clear_button">XOÁ</string>
    <string name="rate_app_button">RATE</string>
    <string name="setting_message">If you enjoy playing this app,\nwould you mind taking a moment to rate it\nIt won\'t take more than a minute.\nありがとう!</string>
    <string name="setting_version">JaVi Memo 1.0.1 was crafted with love\nin Tokyo and across the\nPlanet Earth.</string>

    <string-array name="level_array">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>

    <string name="facebook_app_id">1566898820287328</string>
    <string name="facebook_page_id">株式会社YTAsia-814833155312577</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
