<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ytasia.dictionary.RegistrationActivity">

    <EditText
        android:id="@+id/reg_username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:ems="10"
        android:hint="@string/user_name_label"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/reg_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_username_input"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password_label"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_retype_password_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_password_input"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/retype_password_label"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_retype_password_input"
        android:layout_centerHorizontal="true"
        android:text="@string/registration_button" />
</RelativeLayout>
