<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EntryQuizMainActivity">

    <TextView
        android:id="@+id/entry_quiz_main_high_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/high_score_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/entry_quiz_main_high_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_main_high_score_title"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/entry_quiz_main_your_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_main_high_score_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/your_score_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/entry_quiz_main_your_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_main_your_score_title"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/entry_quiz_main_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_button" />

    <TextView
        android:id="@+id/entry_quiz_main_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_main_start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/level_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/entry_quiz_main_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_main_level_title"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/entry_quiz_main_level_sb"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_main_level_tv"
        android:layout_centerHorizontal="true"
        android:max="4"
        android:progress="0"/>
</RelativeLayout>
