<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ytasia.dict.view.activity.KanjiQuizMainActivity">

    <TextView
        android:id="@+id/kanji_quiz_main_high_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kanji_quiz_main_high_score_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/high_score_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/kanji_quiz_main_high_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kanji_quiz_main_your_score_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/kanji_quiz_main_your_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kanji_quiz_main_your_score_tv"
        android:layout_centerHorizontal="true"
        android:text="@string/your_score_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/kanji_quiz_main_your_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kanji_quiz_main_start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp" />

    <Button
        android:id="@+id/kanji_quiz_main_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_background_light"
        android:padding="20dp"
        android:text="@string/start_button"
        android:textColor="@color/colorPrimary2"
        android:textSize="35dp" />

    <TextView
        android:id="@+id/kanji_quiz_main_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kanji_quiz_main_start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/level_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/kanji_quiz_main_level_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kanji_quiz_main_level_title"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp" />

    <SeekBar
        android:id="@+id/kanji_quiz_main_level_sb"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kanji_quiz_main_level_tv"
        android:layout_centerHorizontal="true"
        android:background="@drawable/seekbar_background"
        android:max="4"
        android:progress="0"
        android:thumb="@drawable/seekbar_thumb" />
</RelativeLayout>
