<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ytasia.dict.view.activity.EntryQuizPlayActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/entry_quiz_play_question_entry_tv"
        android:layout_centerHorizontal="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/entry_quiz_play_your_score_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal"
                android:text="@string/score_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <TextView
                android:id="@+id/entry_quiz_play_time_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="center_horizontal"
                android:text="@string/time_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/entry_quiz_play_your_score_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="50dp" />

            <TextView
                android:id="@+id/entry_quiz_play_time_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="50dp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/entry_quiz_play_question_entry_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/entry_quiz_play_question_furigana_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/entry_quiz_play_question_furigana_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/entry_quiz_play_question_furigana_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/furigana"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/entry_quiz_play_question_furigana_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <Button
        android:id="@+id/entry_quiz_answer_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_play_question_furigana_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="Answer 1 (true)"
        android:textColor="@color/textColorPrimary"
        android:textSize="20dp" />

    <Button
        android:id="@+id/entry_quiz_answer_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_answer_1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="Answer 2 (false)"
        android:textColor="@color/textColorPrimary"
        android:textSize="20dp" />

    <Button
        android:id="@+id/entry_quiz_answer_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_answer_2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="Answer 3"
        android:textColor="@color/textColorPrimary"
        android:textSize="20dp" />

    <Button
        android:id="@+id/entry_quiz_answer_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entry_quiz_answer_3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="Answer 4"
        android:textColor="@color/textColorPrimary"
        android:textSize="20dp" />

</RelativeLayout>
